--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "startDev": "nodemon src/server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.12",
     "sqlite3": "^5.0.2"
