--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,20 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/server.js",
-    "startDev": "nodemon src/server.js"
+    "startDev": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "celebrate": "^15.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "knex": "^0.95.12",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "supertest": "^6.1.6",
+    "jest": "^27.3.1"
   }
 }
